update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Sex-problems-of-man-in-health-and-disease-b-a-popular-study-in-sex-knowledge_74554
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 74554-h/images/cover.jpg
 creator:
   author:
     agent_name: Scholtz, Moses
@@ -8,6 +11,8 @@ creator:
     gutenberg_agent_id: '57547'
     url: http://www.gutenberg.org/2009/agents/57547
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74554#Sex-problems-of-man-in-health-and-disease-b-a-popular-study-in-sex-knowledge
 gutenberg_issued: '2024-10-10'
 gutenberg_type: Text
 identifiers:
